Switched to Makefile for build